--- a/app/globals.css
+++ b/app/globals.css
@@ -67,3 +67,18 @@
     @apply bg-background text-foreground;
   }
 }
+
+.slidePhone {
+  animation-name: slide;
+  animation-duration: 2s;
+  animation-delay: 0.8s;
+}
+
+@keyframes slide {
+  0% {
+    transform: translate(-50%, 100%);
+  }
+  100% {
+    transform: translate(-50%, 60%);
+  }
+}
